# waypointgen-markers

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ros_ci.yml  update.yml
include/waypointgen/: setpoint_marker.h  setpoint_server.h  waypointgen_utils.h
launch/: setpoint_marker.launch  setpoint_server.launch  utest.test
msg/: wpg_stat.msg
rviz/: wp_markers.rviz
src/: setpoint_marker.cpp  setpoint_marker_node.cpp  setpoint_server.cpp  setpoint_server_node.cpp  waypointgen_utils.cpp
srv/: Trigger.srv
test/: utest.cpp
wp_list/: a.yaml
